# sales-n8n-instance

./: .pre-commit-config.yaml  OPTIMIZATIONS_APPLIED.md  README.md  SETUP.md  WHITELABELING_IMPLEMENTED.md  docker-compose.yml
.github/workflows/: OPTIMIZATION_GUIDE.md  README.md  SETUP.md  backup.yml  build-custom-n8n.yml  ci.yml  deploy.yml
_debug/: test-openrouter-workflow.json  test-openrouter.py  test-openrouter.sh  test-python-execution.json  test-python-packages-workflow.json  test-webhook.json  test-webhook.sh  validate-python.sh
_debug/monitoring/: health-check.sh  resource-usage.sh
_docs/: CHANGELOG.md  COMPLETION_STATUS.md  ENHANCEMENT_PLAN.md  ENHANCEMENT_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEVELOPMENT.md  QUICKSTART.md  QUICK_TEST_GUIDE.md  TESTING_CUSTOM_NODES_AND_PACKAGES.md  UI_WORKFLOW_GUIDE.md  WHITELABELING.md  WHITELABELING_SETUP.md  api-integration.md  architecture.md  backup-recovery.md  community-nodes.md  custom-nodes.md  deployment.md  monitoring.md  openrouter-integration.md  python-environment.md  storage-management.md  troubleshooting.md  worker-mode.md
_docs/examples/: openrouter-example.py
_docs/examples/custom-node-template/: README.md  package.json  tsconfig.json
_docs/examples/custom-node-template/nodes/ExampleNode/: ExampleNode.node.ts
_docs/examples/grpc/: README.md  grpc-client-example.py  grpc-proto-example.proto  grpc-qdrant-example.py
_docs/integrations/: graphql.md  instant-graphql-engines.md  pgvector.md  rest-api.md
api-bridge/: .gitignore  Dockerfile  Makefile  README.md  TEST_RESULTS.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.sh
api-bridge/tests/: __init__.py  conftest.py  test_health.py
grafana/dashboards/: n8n-dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
hasura/: config.yaml
hasura/metadata/databases/: databases.yaml
n8n/: Dockerfile  community-nodes.json  requirements.txt
n8n/whitelabel/: .gitignore  .gitkeep  QUICK_START.md  README.md
n8n/whitelabel/config/: brand-config.json
n8n/whitelabel/scripts/: apply-whitelabel.sh  docker-entrypoint.sh
n8n/whitelabel/styles/: custom.css
postgraphile/: Dockerfile
prometheus/: prometheus.yml
prometheus/rules/: n8n-alerts.yml
scripts/: apply-whitelabel.sh  backup.sh  create-env-windows.ps1  create-env.sh  dev-start.sh  generate-query-hash.py  init-pgvector.sh  init-pgvector.sql  restore.sh  setup-volumes.sh  verify-implementation.sh
tests/: README.md  run-all-tests.sh
tests/integrations/: test-instant-graphql-engines.sh  test-pgvector-graphql-rest.sh
tests/sprint1/: test-foundation.sh
tests/sprint10/: test-workflow-enhancements.sh
tests/sprint11/: test-pulsar-integrations.sh
tests/sprint2/: test-python-extensibility.sh
tests/sprint3/: test-scalability-reliability.sh
tests/sprint4/: test-storage-infrastructure.sh
tests/sprint5/: test-health-monitoring.sh
tests/sprint6/: test-security-access.sh
tests/sprint7/: test-performance.sh
tests/sprint8/: test-developer-experience.sh
tests/sprint9/: test-observability.sh
traefik/: traefik.yml
traefik/custom/: whitelabel.css
traefik/dynamic/: n8n.yml
